update the manuscript and supporting information

--- a/jupyterbook/references.bib
+++ b/jupyterbook/references.bib
@@ -1802,36 +1802,14 @@
   eprint        = "2410.02945"
 }
 
-@ARTICLE{Rankin2020-mg,
-  title         = "{FPGAs-as-a-Service} Toolkit ({FaaST})",
-  author        = "Rankin, Dylan Sheldon and Krupa, Jeffrey and Harris, Philip
-                   and Flechas, Maria Acosta and Holzman, Burt and Klijnsma,
-                   Thomas and Pedro, Kevin and Tran, Nhan and Hauck, Scott and
-                   Hsu, Shih-Chieh and Trahms, Matthew and Lin, Kelvin and Lou,
-                   Yu and Ho, Ta-Wei and Duarte, Javier and Liu, Mia",
-  abstract      = "Computing needs for high energy physics are already
-                   intensive and are expected to increase drastically in the
-                   coming years. In this context, heterogeneous computing,
-                   specifically as-a-service computing, has the potential for
-                   significant gains over traditional computing models.
-                   Although previous studies and packages in the field of
-                   heterogeneous computing have focused on GPUs as
-                   accelerators, FPGAs are an extremely promising option as
-                   well. A series of workflows are developed to establish the
-                   performance capabilities of FPGAs as a service. Multiple
-                   different devices and a range of algorithms for use in high
-                   energy physics are studied. For a small, dense network, the
-                   throughput can be improved by an order of magnitude with
-                   respect to GPUs as a service. For large convolutional
-                   networks, the throughput is found to be comparable to GPUs
-                   as a service. This work represents the first open-source
-                   FPGAs-as-a-service toolkit.",
-  month         =  oct,
-  year          =  2020,
-  copyright     = "http://arxiv.org/licenses/nonexclusive-distrib/1.0/",
-  archivePrefix = "arXiv",
-  primaryClass  = "physics.comp-ph",
-  eprint        = "2010.08556"
+@INPROCEEDINGS{Rankin2020-mg,
+  title     = "{FPGAs-as-a-Service} Toolkit ({FaaST})",
+  author    = "Rankin, Dylan Sheldon and Krupa, Jeffrey and Harris, Philip and Flechas, Maria Acosta and Holzman, Burt and Klijnsma, Thomas and Pedro, Kevin and Tran, Nhan and Hauck, Scott and Hsu, Shih-Chieh and Trahms, Matthew and Lin, Kelvin and Lou, Yu and Ho, Ta-Wei and Duarte, Javier and Liu, Mia",
+  booktitle = "2020 IEEE/ACM International Workshop on Heterogeneous High-Performance Reconfigurable Computing (H2RC)",
+  year      = 2020,
+  month     = oct,
+  doi       = "10.1109/H2RC51966.2020.00008",
+  url       = "https://ieeexplore.ieee.org/document/9307091"
 }
 
 @ARTICLE{Heintz2020-qy,
